objects/Job_Applicant__c.object
<CustomObject>
    <label>Job Applicant</label>
    <nameField>
        <displayFormat>Applicant-{0000}</displayFormat>
        <label>Job Applicant Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_O_B__c</fullName>
        <label>D.O.B.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_MAIL__c</fullName>
        <label>E-MAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ON HOLD</fullName>
                </value>
                <value>
                    <fullName>REJECT</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>NOT INTERESTED</fullName>
                </value>
                <value>
                    <fullName>ON BOARD</fullName>
                </value>
                <value>
                    <fullName>APPOINTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>Phone</type>
    </fields>
</CustomObject>